--- a/package.json
+++ b/package.json
@@ -24,23 +24,23 @@
   },
   "homepage": "https://github.com/mitsuruog/react-styleguidist-issue-template#readme",
   "devDependencies": {
-    "@babel/core": "7.8.4",
-    "@babel/preset-env": "7.8.4",
-    "@babel/preset-react": "7.8.3",
-    "babel-loader": "8.0.6",
-    "css-loader": "3.4.2",
-    "html-webpack-plugin": "3.2.0",
-    "react-styleguidist": "10.6.2",
+    "@babel/core": "7.9.0",
+    "@babel/preset-env": "7.9.5",
+    "@babel/preset-react": "7.9.4",
+    "babel-loader": "8.1.0",
+    "css-loader": "3.5.2",
+    "html-webpack-plugin": "4.2.0",
     "source-map-loader": "0.2.4",
-    "style-loader": "1.1.3",
-    "webpack": "4.41.6",
+    "style-loader": "1.1.4",
+    "webpack": "4.43.0",
     "webpack-cli": "3.3.11",
     "webpack-dev-server": "3.10.3"
   },
   "dependencies": {
     "classnames": "2.2.6",
     "prop-types": "15.7.2",
-    "react": "16.12.0",
-    "react-dom": "16.12.0"
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-styleguidist": "11.0.5"
   }
 }
